--- a/js-snacks14/index.html
+++ b/js-snacks14/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <meta charset="utf-8">
-      <title>Memory</title>
+      <title>Good Year!</title>
    </head>
 
    <body>
